# Tickets/urls.py
@@ -16,8 +16,23 @@ Including another URLconf
 """
 from django.contrib import admin
 from django.urls import path
+from mainapp.views import PassengerAPIView, FlightAPIView, FlightSearchByCitiesAPIView
+from rest_framework import permissions
+from drf_yasg.views import get_schema_view
+from drf_yasg import openapi
 
-from mainapp.views import PassengerAPIView
+schema_view = get_schema_view(
+    openapi.Info(
+        title="Flight Booking API",
+        default_version='v1',
+        description="API for managing flights, passengers, and tickets",
+        terms_of_service="https://www.yourapp.com/terms/",
+        contact=openapi.Contact(email="contact@yourapp.com"),
+        license=openapi.License(name="Your License"),
+    ),
+    public=True,
+    permission_classes=(permissions.AllowAny,),
+)
 
 urlpatterns = [
     path("admin/", admin.site.urls),
@@ -25,11 +40,13 @@ urlpatterns = [
     path("api/v1/passengers/<int:pk>", PassengerAPIView.as_view(), name="passenger-detail"),
     # get, put, delete data of specific passenger
 
+    path('swagger/', schema_view.with_ui('swagger', cache_timeout=0), name='schema-swagger-ui'),  # swagger url
+    path('api/v1/flights/', FlightAPIView.as_view(), name='flight-list-create'),
+    path('api/v1/flights/<int:pk>/', FlightAPIView.as_view(), name='flight-detail'),
+    path('api/v1/flights/cities/<str:origin_city>/<str:destination_city>/', FlightSearchByCitiesAPIView.as_view(),
+         name='flight-search-by-cities'),
 
 
-    # path('flights/', FlightListCreateView.as_view(), name='flight-list-create'),
-    # path('flights/<int:pk>/', FlightDetailView.as_view(), name='flight-detail'),
-    #
     # path('tickets/', TicketListCreateView.as_view(), name='ticket-list-create'),
     # path('tickets/<int:pk>/', TicketDetailView.as_view(), name='ticket-detail'),
 ]
