# swagger.yaml
@@ -2,8 +2,10 @@ openapi: 3.0.0
 info:
   title: Flight Booking API
   version: 1.0.0
+servers:
+  - url: http://127.0.0.1:8000
 paths:
-  /flights:
+  /api/v1/flights/:
     get:
       summary: Get a list of flights
       responses:
@@ -75,7 +77,7 @@ paths:
         '201':
           description: Flight created successfully
 
-  /flights/{id}:
+  /api/v1/flights/{id}:
     get:
       summary: Get details of a specific flight
       parameters:
@@ -162,8 +164,41 @@ paths:
       responses:
         '204':
           description: Flight deleted successfully
-
-  /passengers:
+  /api/v1/flights/cities/{origin_city}/{destination_city}/:
+    get:
+      summary: Get flights by origin and destination cities
+      parameters:
+        - name: origin_city
+          in: path
+          description: Origin city for flight search
+          required: true
+          schema:
+            type: string
+            maxLength: 64
+        - name: destination_city
+          in: path
+          description: Destination city for flight search
+          required: true
+          schema:
+            type: string
+            maxLength: 64
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              example:
+                - origin_city: "City1"
+                  origin_code: "C1"
+                  origin_country: "Country1"
+                  destination_city: "City2"
+                  destination_code: "C2"
+                  destination_country: "Country2"
+                  depart_time: "14:30:00"
+                  duration: "3:30:00"
+                  plane: "Plane1"
+                  airline: "Airline1"
+  /api/v1/passengers:
     get:
       summary: Get a list of passengers
       responses:
@@ -200,7 +235,7 @@ paths:
         '201':
           description: Passenger created successfully
 
-  /passengers/{id}:
+  /api/v1/passengers/{id}:
     get:
       summary: Get details of a specific passenger
       parameters:
@@ -260,7 +295,7 @@ paths:
         '204':
           description: Passenger deleted successfully
 
-  /tickets:
+  /api/v1/tickets:
     get:
       summary: Get a list of tickets
       responses:
@@ -327,7 +362,7 @@ paths:
         '201':
           description: Ticket created successfully
 
-  /tickets/{id}:
+  /api/v1/tickets/{id}:
     get:
       summary: Get details of a specific ticket
       parameters:
@@ -420,7 +455,7 @@ paths:
         '204':
           description: Ticket deleted successfully
 
-  /tickets/search:
+  /api/v1/tickets/search:
     get:
       summary: Search for tickets based on origin city
       parameters:
@@ -457,7 +492,7 @@ paths:
                   booking_date: "2023-01-01T12:00:00"
                   status: "Confirmed"
 
-  /tickets/search-by-destination:
+  /api/v1/tickets/search-by-destination:
     get:
       summary: Search for tickets based on destination city
       parameters:
